--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 .container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 50px 220px;
+    height: 100vh;
+    width: 100vw;
+    display: grid;   
 }
-.item{
+ .item{
     background-color: bisque;
-    height: 200px;
-    width: 200px;
+} 
+.done{
+    background-color: rgb(255, 198, 128);
 }
+
